# esp-nvs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  devenv.nix  justfile  rustfmt.toml
.github/workflows/: check.yml  nostd.yml  test.yml
.nix/: esp-nvs-partition-tool.nix
esp-nvs/: Cargo.toml  justfile
esp-nvs-lib/: Cargo.toml
esp-nvs-lib/src/: get.rs  internal.rs  u24.rs
esp-nvs-lib/tests/: common.rs
esp-nvs-partition-tool/: Cargo.toml  README.md  justfile
esp-nvs-partition-tool/src/: binary_parser.rs  csv.rs  csv_writer.rs  error.rs  generator.rs  lib.rs  parser.rs  partition.rs  types.rs
esp-nvs-partition-tool/src/csv/: parser.rs  row.rs  writer.rs
esp-nvs-partition-tool/src/partition/: consts.rs  crc.rs  generator.rs  parser.rs
esp-nvs-partition-tool/tests/: generate.rs  integration_tests.rs  parse.rs  roundtrip.rs
esp-nvs-partition-tool/tests/assets/: hex2bin_test.csv  invalid_long_key.csv  large_string.csv  lorem_string.txt  multiple_namespaces.csv  roundtrip_basic.csv  simple_roundtrip.csv
esp-nvs-partition-tool/tests/common/: mod.rs
esp-nvs/src/: error.rs  get.rs  internal.rs  lib.rs  mem_flash.rs  platform.rs  raw.rs  set.rs  u24.rs
esp-nvs/tests/: benchmark.rs  common.rs  read.rs  write.rs
esp-nvs/tests/assets/: test_nvs_data.csv
nvs_part/: Cargo.toml  README.md
nvs_part/src/: binary_parser.rs  generator.rs  lib.rs
nvs_part/tests/: integration_tests.rs  roundtrip.rs
src/: error.rs  internal.rs  lib.rs  platform.rs  raw.rs  set.rs
tests/: benchmark.rs  common.rs  write.rs
