[package]
name = "esp-nvs-partition-tool"
version = "0.1.0"
edition = "2021"
authors = ["Lars Hemala"]
repository = "https://github.com/lhemala/esp-nvs/"
license = "MIT OR Apache-2.0"
description = "ESP-IDF compatible NVS partition table parser and generator"
keywords = ["esp", "embedded", "nvs", "partition", "esp-idf"]
categories = ["command-line-utilities", "embedded", "parsing"]

[lib]
name = "esp_nvs_partition_tool"
path = "src/lib.rs"

[[bin]]
name = "esp-nvs-partition-tool"
path = "src/bin/main.rs"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
hex = "0.4"
base64 = "0.22"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dev-dependencies]
tempfile = "3.14"
esp-nvs = { path = "../esp-nvs" }
libz-sys = "1.1.22"
embedded-storage = "0.3.1"
